# World_IMaker

./: README.md
code/: CMakeLists.txt
code/Test/: config1  config2  cube_try_data_display.cpp  cube_try_display.cpp  gen_conf.cpp  grab.cpp  points_control_1D.cpp  points_control_3D.cpp  procedural_generation.cpp  procedural_generation_v2.cpp  save_load.cpp  saving2  saving_procgen_exp_7_pts_centered  saving_procgen_exp_8_pts_vertices_max  saving_procgen_rat_8_pts_vertices_max  saving_procgen_sqrt_7_pts_centered_compact  saving_procgen_sqrt_8_pts_vertices_max  scene_cubes.cpp  scene_cubes_transparency.cpp  scene_world.cpp  test_main.cpp  world_draw.cpp
code/Test/shaders/: cube.fs.glsl  cube.vs.glsl
code/config/: config1  config3  config4_sqrt_max  config5_lin_max  config6_exp_max  config7_exp_centered  config8_lin_centered  config9_sqrt_centered  exp_center
code/doc/: CMakeLists.txt  Doxyfile-html.cmake  code_utilisation_camera.cpp  pseudo_code
code/glimac/include/glimac/: Cube.hpp  FreeFlyCamera.hpp  Interface.hpp  RBF.hpp  SDLWindowManager.hpp  Scene.hpp  TrackballCamera.hpp
code/glimac/src/: Cube.cpp  FreeFlyCamera.cpp  Interface.cpp  RBF.cpp  Scene.cpp  TrackballCamera.cpp
code/savings/: 10  lin_centered  lin_max  rat_centered  saving1  saving_config2  saving_demo  sqrt_centered
code/src/: CMakeLists.txt  cube_freefly.cpp  cube_try.cpp  main.cpp
code/src/shaders/: 3D.vs.glsl  cube.fs.glsl  cube.vs.glsl
doc/: pseudo_code
include/: TrackballCamera.hpp  cube.hpp
shaders/: cube.fs.glsl  cube.vs.glsl
src/: TrackballCamera.cpp  code_utilisation_camera.cpp  cube.cpp  cube_try.cpp  sphere.cpp
